# ecommerce-agent

./: .gitignore  README.md  docker-compose.yml  env.example
api/: Dockerfile.api  Dockerfile.data-init  main.py  pyproject.toml  startup_data_check.py
api/data/: README.md
api/pluto/: agent.py  app.py  kumo_integration.py  schemas.py  tools.py
api/pluto/prompts/: __init__.py  developer.py
api/pluto/routers/: chat.py
api/pluto/utils/: logger.py
api/tests/: test_chat.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/src/: types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatOutput.tsx  ChatTextArea.tsx  CodeRenderer.tsx  Sidebar.tsx
