[project]
name = "pluto"
version = "0.0.2"
description = "Template project for GraphAI-powered chat apps"
authors = [
    {name = "Aurelio AI"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "fastapi>=0.116.1",
    "graphai-lib==0.0.10rc1",
    "openai>=1.106.1",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-instrumentation-fastapi>=0.57b0",
    "opentelemetry-instrumentation-logging>=0.57b0",
    "opentelemetry-sdk>=1.36.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "uvloop>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pluto"]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.30.1",
    "mypy>=1.17.1",
    "ruff>=0.12.12",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade,
    "I",  # isort
    "B006", # mutable defaults
]
# Never enforce `E501` (line length violations).
ignore = ["E501"]
fixable = ["ALL"]
exclude = ["*.ipynb"]
